Atualizações tela de login

--- a/views/Login/login.html
+++ b/views/Login/login.html
@@ -12,25 +12,24 @@
         <div class="navigation">
             <div class="top-nav">
                 <div class="welcome-to-clicon-online-e-commerce-store">
-                    Welcome to Clicon online eCommerce store.
+                    Bem - vindo à loja de comércio eletrônico online da Clicon.
                 </div>
                 <div class="left-content">
                     <div class="follow-us">
-                        <div class="follow-us2">Follow us:</div>
+                        <div class="follow-us2">Redes Sociais:</div>
                         <div class="social-icon">
-                            <img class="twitter" src="twitter0.svg" />
-                            <a href="https://www.facebook.com/?locale=pt_BR"><img class="facebook" src="image/facebook.png" /></a>
-                            <img class="pinterest" src="pinterest0.svg" />
-                            <img class="reddit" src="reddit0.svg" />
-                            <img class="youtube" src="youtube0.svg" />
-                            <img class="instagram" src="instagram0.svg" />
+                            <a href="https://x.com/?lang=pt-br"><img class="twitter" src="image/twitter.png" /></a>
+                            <a href="https://pt-br.facebook.com/"><img class="facebook" src="image/facebook.png" /></a>
+                            <a href="https://br.pinterest.com/"><img class="pinterest" src="image/pinterest.png" /></a>
+                            <a href="https://www.youtube.com/"><img class="youtube" src="image/youtube.png" /></a>
+                            <a href="https://www.instagram.com/"><img class="instagram" src="image/instagram.png" /></a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="middle-nav">
                 <div class="logo">
-                    <img class="icon" src="icon0.svg" />
+                    <img class="icon" src="image/logo_header.png" />
                     <div class="clicon">CLICON</div>
                 </div>
                 <div class="frame-18">
@@ -41,57 +40,54 @@
                 </div>
                 <div class="icons">
                     <div class="shopping-cart-simple">
-                        <img class="vector" src="vector0.svg" />
-                        <img class="vector2" src="vector1.svg" />
-                        <img class="vector3" src="vector2.svg" />
-                        <img class="vector4" src="vector3.svg" />
+                        <img src="image/carrinho.png" />
                         <div class="frame-182">
                             <div class="_2">2</div>
                         </div>
                     </div>
-                    <img class="heart" src="heart0.svg" />
-                    <img class="regular-user" src="regular-user0.svg" />
+                    <img class="heart" src="image/favoritos.png" />
+                    <img class="regular-user" src="image/usuario.png" />
                 </div>
             </div>
             <div class="bottom-nav">
                 <div class="left-side">
                     <div class="category">
                         <div class="button">
-                            <a href="#" class="label">All Category</a>
-                            <img class="regular-caret-down3" src="regular-caret-down2.svg" />
+                            <a href="#" class="label">Todas as categorias</a>
+                            <img class="regular-caret-down3" src="image/menu_categorias.png" />
                         </div>
                     </div>
                     <div class="track-order">
-                        <img class="regular-map-pin-line" src="regular-map-pin-line0.svg" />
-                        <a href="#" class="track-order2">Track Order</a>
+                        <img class="regular-map-pin-line" src="image/rastrear_pedido.png" />
+                        <a href="#" class="track-order2">Rastrear pedido</a>
                     </div>
                     <div class="compare">
-                        <img class="duotone-arrows-counter-clockwise" src="duotone-arrows-counter-clockwise0.svg" />
-                        <a href="#" class="compare2">Compare</a>
+                        <img class="duotone-arrows-counter-clockwise" src="image/comparar.png" />
+                        <a href="#" class="compare2">Comparar</a>
                     </div>
                     <div class="customer-support">
-                        <img class="regular-headphones" src="regular-headphones0.svg" />
-                        <a href="#" class="customer-support2">Customer Support</a>
+                        <img class="regular-headphones" src="image/suporte.png" />
+                        <a href="#" class="customer-support2">Suporte ao cliente</a>
                     </div>
                     <div class="need-help">
-                        <img class="regular-info" src="regular-info0.svg" />
-                        <a href="#" class="need-help2">Need Help</a>
+                        <img class="regular-info" src="image/ajuda.png" />
+                        <a href="#" class="need-help2">Ajuda</a>
                     </div>
                 </div>
                 <div class="call-now">
-                    <img class="regular-phone-call" src="regular-phone-call0.svg" />
+                    <img class="regular-phone-call" src="image/telefone.png" />
                     <div class="_1-202-555-0104">+1-202-555-0104</div>
                 </div>
             </div>
         </div>
         <div class="breadcrumb">
             <div class="breadcumb">
-                <img class="regular-house" src="regular-house0.svg" />
-                <a href="#" class="home">Home</a>
-                <img class="regular-caret-right" src="regular-caret-right0.svg" />
-                <a href="#" class="shop-grid">User Account</a>
-                <img class="regular-caret-right2" src="regular-caret-right1.svg" />
-                <a href="#" class="behicle-accessories">Sign In</a>
+                <img class="regular-house" src="image/home.png" />
+                <div class="home">Início</div>
+                <img class="regular-caret-right" src="image/avancar.png" />
+                <div class="shop-grid">Conta de usuário</div>
+                <img class="regular-caret-right2" src="image/avancar.png" />
+                <div class="behicle-accessories">Entrar</div>
             </div>
         </div>
         <div class="frame-395">
@@ -99,43 +95,43 @@
                 <div class="bg"></div>
                 <div class="from">
                     <div class="order-id">
-                        <label class="email-address">Email Address</label>
+                        <label class="email-address">Endereço de email</label>
                         <input class="input-field" type="email" required>
                     </div>
                     <div class="order-id">
                         <div class="box_olho">
-                            <label class="password">Password</label>
+                            <label class="password">Senha</label>
                             <span id="olho" class="olho_aberto" onclick="mudarIcone()"></span>
                         </div>
                         <input id="input_senha" class="input-field" type="password" required>
                     </div>
                 </div>
                 <div>
-                    <button class="button2">Sign in</button>
+                    <button class="button2">Entrar</button>
                 </div>
                 <div class="or-login-with">
                     <div class="don-t-have-account">
                         <div class="line-20"></div>
                         <div class="label3">
-                            <div class="or">or</div>
+                            <div class="or">ou</div>
                         </div>
                     </div>
                     <div class="login-register-with">
-                        <a href="#" class="login-with-google">Login with Google</a>
+                        <a href="#" class="login-with-google">Faça login com o Google</a>
                         <img class="google" src="google0.png" />
                     </div>
                     <div class="login-register-with">
-                        <a href="#" class="login-with-apple">Login with Apple</a>
+                        <a href="#" class="login-with-apple">Faça login com a Apple</a>
                         <img class="apple" src="apple0.svg" />
                     </div>
                 </div>
                 <div class="line-29"></div>
                 <div class="tab">
                     <div class="tab2">
-                        <a href="#" class="sign-in">Sign In</a>
+                        <a href="#" class="sign-in">Entrar</a>
                     </div>
                     <div class="tab3">
-                        <a href="#" class="sign-in2">Sign Up</a>
+                        <a href="#" class="sign-in2">Inscrever-se</a>
                     </div>
                 </div>
             </form>
@@ -144,12 +140,12 @@
             <div class="footer2">
                 <div class="clicon-e-commerce">
                     <div class="logo">
-                        <img class="icon2" src="icon1.svg" />
+                        <img class="icon2" src="image/logo_footer.png" />
                         <div class="clicon">CLICON</div>
                     </div>
                     <div class="contact-info">
                         <div class="phone-number">
-                            <div class="customer-supports">Customer Supports:</div>
+                            <div class="customer-supports">Suporte ao cliente:</div>
                             <a href="#" class="_629-555-0129">(629) 555-0129</a>
                         </div>
                         <div class="_4517-washington-ave-manchester-kentucky-39495">
@@ -159,7 +155,7 @@
                     </div>
                 </div>
                 <div class="top-category">
-                    <div class="top-category2">Top Category</div>
+                    <div class="top-category2">Top Categoria</div>
                     <div class="item">
                         <div class="footer-links">
                             <a href="#" class="electronics">Computer &amp; Laptop</a>
@@ -172,7 +168,7 @@
                         </div>
                         <div class="footer-links">
                             <div class="devider"></div>
-                            <div class="electronics2">Accessories</div>
+                            <div class="electronics2">Acessórios</div>
                         </div>
                         <div class="footer-links">
                             <a href="#" class="electronics">Camera &amp; Photo</a>
@@ -181,62 +177,62 @@
                             <a href="#" class="electronics">TV &amp; Homes</a>
                         </div>
                         <div class="button3">
-                            <a href="#" class="browse-all-product">Browse All Product</a>
-                            <img class="regular-arrow-right2" src="regular-arrow-right1.svg" />
+                            <a href="#" class="browse-all-product">Navegue por produtos</a>
+                            <img class="regular-arrow-right2" src="image/navegar.png" />
                         </div>
                     </div>
                 </div>
                 <div class="quick-links">
-                    <div class="quick-links2">Quick links</div>
+                    <div class="quick-links2">Links rápidos</div>
                     <div class="item">
                         <div class="footer-links">
-                            <a href="#" class="electronics">Shop Product</a>
+                            <a href="#" class="electronics">Produtos da loja</a>
                         </div>
                         <div class="footer-links">
-                            <a href="#" class="electronics">Shoping Cart</a>
+                            <a href="#" class="electronics">Carrinho de compras</a>
                         </div>
                         <div class="footer-links">
-                            <a href="#" class="electronics">Wishlist</a>
+                            <a href="#" class="electronics">Lista de desejos</a>
                         </div>
                         <div class="footer-links">
-                            <a href="#" class="electronics">Compare</a>
+                            <a href="#" class="electronics">Comparar</a>
                         </div>
                         <div class="footer-links">
-                            <a href="#" class="electronics">Track Order</a>
+                            <a href="#" class="electronics">Rastrear pedido</a>
                         </div>
                         <div class="footer-links">
-                            <a href="#" class="electronics">Customer Help</a>
+                            <a href="#" class="electronics">Ajuda</a>
                         </div>
                         <div class="footer-links">
-                            <a href="#" class="electronics">About Us</a>
+                            <a href="#" class="electronics">Sobre nós</a>
                         </div>
                     </div>
                 </div>
                 <div class="quick-links3">
-                    <div class="download-a-pp">Download APp</div>
+                    <div class="download-a-pp">Download App</div>
                     <div class="links">
                         <div class="mobile-app">
                             <div class="icon-google-play-1">
-                                <img class="group" src="group0.svg" />
+                                <img class="group" src="image/playstore.png" />
                             </div>
                             <div class="info">
-                                <div class="get-it-now">Get it now</div>
+                                <div class="get-it-now">Baixe agora</div>
                                 <a href="#" class="google-play">Google Play</a>
                             </div>
                         </div>
                         <div class="mobile-app">
                             <div class="apple-negative-1">
-                                <img class="group2" src="group1.svg" />
+                                <img class="group2" src="image/apple.png" width="30" height="30"/>
                             </div>
                             <div class="info">
-                                <div class="get-it-now">Get it now</div>
+                                <div class="get-it-now">Baixe agora</div>
                                 <a href="#" class="app-store">App Store</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="popular-tag">
-                    <div class="popular-tag2">Popular Tag</div>
+                    <div class="popular-tag2">Tag popular</div>
                     <div class="tag">
                         <div class="row">
                             <div class="tag2">
@@ -259,7 +255,7 @@
                             <div class="tag2">
                                 <a href="#" class="cooking">SSD</a>
                             </div>
-                            <div class="tag3">
+                            <div class="tag2">
                                 <a href="#" class="cooking">Graphics Card</a>
                             </div>
                         </div>
