--- a/views/shopingCard/shopingCard.ejs
+++ b/views/shopingCard/shopingCard.ejs
@@ -55,12 +55,12 @@
             <div class="bottom-nav">
                 <div class="left-side">
                     <div class="category">
-                        <div class="button">
-                            <a class="categorias" href="#">
+                        <a class="categorias" href="#">
+                            <div class="button">
                                 <div class="label">Todas as categorias</div>
                                 <img class="regular-caret-down3" src="image/menu_categorias.png" />
-                            </a>
-                        </div>
+                            </div>
+                        </a>    
                         <div class="todas_as_categorias">
                             <a href="#">Smartphones</a>
                             <a href="#">Informática</a>
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <div class="top-category">
-                    <div class="top-category2">Top Categoria</div>
+                    <div class="top-category2">Top Categorias</div>
                     <div class="item">
                         <div class="footer-links">
                             <a href="#" class="electronics">Computer &amp; Laptop</a>
