--- a/views/shopingCard/shopingCard.css
+++ b/views/shopingCard/shopingCard.css
@@ -17,10 +17,11 @@
   position: absolute;
   left: 0px;
   top: 0px;
+  width: 100%;
 }
 .top-nav {
   background: var(--secondary-700, #1b6392);
-  padding: 12px 300px 12px 70px;
+  padding: 12px 300px 12px 210px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -208,7 +209,7 @@
 }
 .middle-nav {
   background: var(--secondary-700, #1b6392);
-  padding: 20px 300px 20px 70px;
+  padding: 20px 300px 20px 200px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -592,10 +593,11 @@
 }
 .breadcrumb {
   background: var(--gray-50, #f2f4f5);
-  padding: 24px 300px 24px 300px;
+  padding: 24px 5px 24px 10px;
   width: 100%;
   height: 72px;
   position: absolute;
+  flex-shrink: 0;
   left: 0px;
   top: 220px;
   width: 100%;
@@ -659,10 +661,10 @@
 }
 .footer2 {
   background: var(--gray-900, #191c1f);
-  padding: 72px 300px 72px 10px;
+  padding: 72px 300px 72px 50px;
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  gap: 5px;
   align-items: flex-start;
   justify-content: flex-start;
   width: 100%;
@@ -1908,13 +1910,17 @@ a {
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  height: 190px;
+  height: 215px;
   top: 60px;
   left: 0px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 .category:hover .todas_as_categorias {
+  display: flex;
+  flex-direction: column;
+}
+.todas_as_categorias:hover {
   display: flex;
   flex-direction: column;
 }
