Ajustes menu dropdown e css shopingcard

--- a/views/Login/login.css
+++ b/views/Login/login.css
@@ -394,12 +394,12 @@
   width: 100%;
   position: relative;
   box-shadow: inset 0px -1px 0px 0px rgba(228, 231, 233, 1);
-  gap: 90px;
+  gap: 150px;
 }
 .left-side {
   display: flex;
   flex-direction: row;
-  gap: 24px;
+  gap: 15px;
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
@@ -1566,12 +1566,13 @@ a {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
-  height: 215px;
+  min-width: 153px;
+  height: 205px;
   top: 60px;
   left: 0px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  font-size: 18px;
 }
 .category:hover .todas_as_categorias {
   display: flex;
