Atualização dos produtos

--- a/views/Details/produto.html
+++ b/views/Details/produto.html
@@ -531,7 +531,7 @@
                 </div>
                 <div class="button6">
                   <div class="browse-all-product">Navegar por todos os produtos</div>
-                  <img class="regular-arrow-right2" src="regular-arro" />
+                  <img class="regular-arrow-right2" src="/views/Details/img/icons8-seta-longa-à-direita-32.png" />
                 </div>
               </div>
             </div>
